--- a/Introduction/Introduction_tidy.Rmd
+++ b/Introduction/Introduction_tidy.Rmd
@@ -56,5 +56,6 @@ UNpop.tidy %>% # subset the first three rows of years
 - Tidyverse: %>% (Forward pipe operator)
 
 ###When to use Base R/tidyverse?
-- 
+- Combination of both
+
 
