--- a/Causality/Causality1_tidy.Rmd
+++ b/Causality/Causality1_tidy.Rmd
@@ -19,6 +19,60 @@ library(qss)
 data(resume, package = "qss")
 ```
 
+# Exercise 
+## Subsetting Data and Pipe operator
+```{r, eval=FALSE, echo=TRUE}
+setwd("~/Dropbox/GitHub/qss-inst-tidyverse/Introduction")
+UNpop <- read.csv("data/UNpop.csv")
+
+glimpse(UNpop)
+dim(UNpop)s
+
+## Subset the first three rows of UNpop with tidyverse
+slice(UNpop, n = 1:3)
+
+## Extract the world.pop variable
+select(UNpop, world.pop)
+
+## Pipe operator %>% to link commands together
+UNpop %>%
+  select(world.pop) %>%
+  slice(1:3)
+```
+
+## Adding new variables: mutate()
+```{r, eval=FALSE, echo=TRUE}
+## Create an additional column based on existing ones
+UNpop.mill <- UNpop %>%
+                mutate(world.pop.mill = world.pop / 1000) 
+
+## Conditional statement: if_else()
+UNpop.mill <- UNpop.mill %>%
+  mutate(after.1980 = if_else(year >= 1980, "yes", "no"))
+
+## Conditional symbol: %in%
+target.years <- c(1950, 1980, 2000)
+
+UNpop.mill <- UNpop.mill %>% 
+  mutate(year.of.interest = if_else(year %in% target.years, "yes", "no"))
+```
+
+## Summarizing data frames: summarize()
+```{r, eval=FALSE, echo=TRUE}
+## Base R
+summary(UNpop.mill)
+mean(UNpop.mill$world.pop)
+
+## Tidyverse 
+UNpop.mill %>%
+  summarize(mean.pop = mean(world.pop.mill),
+            median.pop = median(world.pop.mill))
+
+UNpop.mill %>%
+  group_by(after.1980) %>%
+  summarize(mean.pop = mean(world.pop.mill))
+```
+
 ## Pipe operations
 ```{r, eval=FALSE, echo=TRUE}
 setwd("~/Dropbox/GitHub/qss-inst-tidyverse/Causality")
