--- a/Causality/causality_tidy.Rmd
+++ b/Causality/causality_tidy.Rmd
@@ -6,7 +6,7 @@ date: "5/26/2022"
 output: 
   beamer_presentation:
     slide_level: 2
-    toc: false
+    toc: true
     theme: "Madrid"
     colortheme: "beaver"
 ---
@@ -14,12 +14,9 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 options(width = 100)
+library(knitr)
+library(cowplot)
 ```
-
-## Table of Contents
-- Subset data 
-- Summarize data
-- Add new variable
 
 ## Load packages and data
 ```{r warning=FALSE, message=FALSE}
@@ -29,50 +26,79 @@ library(qss)
 
 ## load data
 resume <- read_csv("data/resume.csv")
+
+# check data 
+resume
 ```
 
-## Subset data
+## `dplyr` from `Tidyverse`
+
+```{r fig.show="hold", out.width="80%", fig.align='center', echo=FALSE}
+ggdraw() + 
+  draw_image("figure/dplyr.png") 
+```
+*Source: RStudio*
+
+# Subset data
+## `select()` and `filter()`
+
 - `select`: Return columns by name/number/etc.
 - `filter`: Return rows by name/number/etc.
 
+\tiny
 ```{r}
 ## subset data with first name
-resumeN <- resume %>% 
-  select(firstname)
-
+resume_sex <- resume %>% 
+  select(sex)
+head(resume_sex, 3)
 ## subset data with black names
 resumeB <- resume %>% 
   filter(race == "black")
-
-## subset data with black, female-sounding names
-resumeBf <- resume %>% 
-  filter(race == "black" & sex == "female")
+head(resumeB, 3)
 ```
 
-## Summarize data
+## Data Wrangling
+
+```{r}
+## subset data with black, female-sounding names
+## Then, let'ss remove the firstname
+resumeBf_without_firstname <- resume %>% 
+  filter(race == "black" & sex == "female") %>% 
+  select(!firstname)
+resumeBf_without_firstname
+```
+
+
+# Summarize data
+## `summarise()`
+\tiny
 ```{r}
 ## callback rate for black female names
 Bf_callback <- resume %>% 
   filter(race == "black" & sex =="female") %>%
   summarize(callback_rate = mean(call, na.rm = TRUE))
 
+Bf_callback
+
 ## callback rate for white female names
 Wf_callback <- resume %>% 
   filter(race == "white" & sex == "female") %>%
   summarize(callback_rate = mean(call, na.rm = TRUE))
 
+Wf_callback
+
 ## difference between white and black women
 Wf_callback - Bf_callback
 ```
 
-## Add new variable
-
+# Add new variable
+## `mutate()`
 \tiny
 
 ### calculate target values
 The way we did previously with `filter()` and `summarise()`. 
 
-### create factor variable
+### create factor variable with `mutate`
 ```{r}
 ## create a factor variable that takes one of the four values
 resume <- resume %>%
@@ -85,3 +111,10 @@ resume <- resume %>%
 head(resume)
 ```
 
+# Summary
+
+## Let's practice!
+```{r fig.show="hold", out.width="80%", fig.align='center', echo=FALSE}
+ggdraw() + 
+  draw_image("figure/dplyr.png") 
+```
